# graphic

./: CMakeLists.txt  README.md  main.cpp  version.h
includes/glog/: logging.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: CMakeLists.txt  kkApplication.cpp  kkApplication.h  kkWindow.cpp  kkWindow.h
src/geometry/: CMakeLists.txt  kkGeometry.h  kkTriangle.h
src/kernal/: kkconsole.cpp  kkconsole.h
src/math/: Vector3.cpp  Vector3.h  kkMathBase.h
src/platform/: kkPlatformMacors.h
src/renderer/: kkBaseRender.h
